fix stat summary on mobile probably

--- a/playerInfo/playerInfoStyles.css
+++ b/playerInfo/playerInfoStyles.css
@@ -423,4 +423,8 @@ section.summaryContent {
     h4 {
         text-align: center;
     }
+    .mostUsedTowers {
+        flex: 1;
+        flex-direction: column;
+    }
   }
